external-crates/move/crates/move-compiler/tests/move_check/unit_test/invalid_expected_code_name@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10003]: invalid attribute value
  ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:4:7
  │
4 │     #[expected_failure(cod=1)]
  │       ^^^^^^^^^^^^^^^^^^^^^^^ Invalid '#[expected_failure(...)]' attribute, no failure kind found. Expected one of: 'abort_code', 'arithmetic_error', 'vector_error', 'out_of_gas', or 'major_status'

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:4:24
  │
4 │     #[expected_failure(cod=1)]
  │                        ^^^^^ Unused attribute for 'expected_failure'

error[E10003]: invalid attribute value
  ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:8:7
  │
8 │     #[expected_failure(code=1)]
  │       ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid '#[expected_failure(...)]' attribute, no failure kind found. Expected one of: 'abort_code', 'arithmetic_error', 'vector_error', 'out_of_gas', or 'major_status'

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:8:24
  │
8 │     #[expected_failure(code=1)]
  │                        ^^^^^^ Unused attribute for 'expected_failure'

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:12:7
   │
12 │     #[expected_failure(abort_cod=1)]
   │       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid '#[expected_failure(...)]' attribute, no failure kind found. Expected one of: 'abort_code', 'arithmetic_error', 'vector_error', 'out_of_gas', or 'major_status'

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/invalid_expected_code_name.move:12:24
   │
12 │     #[expected_failure(abort_cod=1)]
   │                        ^^^^^^^^^^^ Unused attribute for 'expected_failure'
